# free_cash_flow_prediction

./: Operatingcashflow_p.ipynb  pyproject.toml  research_objective.md
.agents/rules/: code-style-guide.md
annual_report/API/: report.json
data/: financial_statement_features.csv  hydro.csv  macroecomics_features.csv  master_ml_dataset.csv  nea_macro_features_imputed.csv  nea_macro_features_raw.csv  operational_features.csv  operational_mapping.csv
data_reviewer/: DATA_VALIDATION_GUIDE.md
machine_learning/: ML_COAUTHOR_GUIDE.md
misc_data/: doed_hydro_greater_then_1MW.csv  doed_hydro_less_then_1MW.csv  doed_solar_license.csv  listed_hydro.csv
nrb_reports/: Current_Macroeconomic_Situation_English-2011-06_Tables_Based-on-ten-months-data-of-2010-11.xls  Macroeconomic-Indicators-of-Nepal-2025-December.xlsx
progress_track/: data_collection_log.md  feature_definitions_and_contributions.md  methodology.md
scripts/: extract_nea.py  extract_nrb.py  extract_operational_features.py  generate_financial_features.py  impute_nea_macro.py  merge_master_dataset.py
