[project]
name = "apex-journal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cloudscraper>=1.2.71",
    "langdetect>=1.0.9",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "playwright>=1.60.0",
    "scikit-learn>=1.9.0",
    "tabulate>=0.10.0",
]
